--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             position: absolute;
             top: 10px;
             left: 50%;
-            font-size: 80px;
+            font-size: 85px;
             font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             transform: translateX(-50%);
+            transition: ease-in-out 0.2;
         }
         .shop {
             top: 80%;
@@ -120,7 +121,7 @@
         .title_shop {
             text-align: center;
             font-size: 50px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-weight: 1000;
         }
         input {
@@ -179,7 +180,8 @@
             align-items: center;
             display: flex;
             margin-top: 90px;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
         }
         /*#circle_click {
             font-size: 50px;
@@ -209,7 +211,7 @@
         {
             text-align: center;
             font-size: 40px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-weight: 1000;
         }
         .change_world
@@ -219,6 +221,8 @@
             position: absolute;
             left: 46vw;
             font-size: 30px;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            font-weight: 900;
         }
         .game {
             display: none;
@@ -289,14 +293,47 @@
             top: 67vh;
             left: 28%;
         }
-
+        .reset {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            font-size: 4.3vw;
+            height: 60px;
+            width: 250px;
+            transition: ease-in 0.1s;
+            position: absolute; /* Use absolute positioning */
+            border-radius: 5px; /* Adjust as needed */
+            border: none; /* Adjust as needed */
+            background-color: #4CAF50; /* Adjust as needed */
+            color: white; /* Adjust as needed */
+            font-size: 20px; /* Adjust as needed */
+            cursor:pointer; /* Changes the cursor when hovering over the button */
+            max-width: 70%;
+            top: 40vh;
+            left: 34%;
+        }
+        #moon_icon {
+            font-size: 130px;
+            position: absolute;
+            top: 10vh;
+            left: 10vw;
+            cursor: pointer;
+        }
+        #sun {
+            font-size: 130px;
+            position: absolute;
+            top: 62vh;
+            left: 70vw;
+            cursor: pointer;
+        }
     </style>
     <script src="https://kit.fontawesome.com/c68f917b3f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
         <div class="title" id="title">
-            World Clicker
+            Planet Clicker
         </div>
         <button class="play" id="play">
             Play
@@ -304,6 +341,8 @@
         <button class="settings_onplay" id="settings_button">
             Settings
         </button>
+        <i class="fa-solid fa-moon" id="moon_icon"></i>
+        <i class="fa-solid fa-sun" id="sun"></i>
 
     <div class="game" id="game">
     <div class="clicks" id="clicks">0</div>
@@ -319,8 +358,8 @@
         <div class="title_settings">
             Settings
         </div>
+        <button class="reset">Reset</button>
         <div class="wantsave">
-            Do u want to save ur progress?
         </div>
     </div>
     <i id="arrow" class="fa-solid fa-arrow-pointer"></i>
@@ -350,7 +389,48 @@
     <!--<i id="circle_click" class="fa-regular fa-circle"></i> WORKING IN PROGRESS-->
 
     <script>
-        let clicks = 0; 
+ // Define the cookie name
+// Define the cookie name
+// Define the cookie name
+var cookieName = "score=";
+
+// Check if the cookie exists
+if (document.cookie.indexOf(cookieName) == -1) {
+    console.log("Cookie does not exist");
+} else {
+    console.log("Cookie exists");
+}
+
+// Get the score from the cookie
+var score = document.cookie.split('; ').find(row => row.startsWith('score'));
+
+let clicks;
+
+// Initialize your game state with the score
+if (score) {
+    clicks = parseInt(score.split('=')[1]);
+} else {
+    // If there's no score cookie, initialize with a default value
+    clicks = 0;
+}
+
+// Function to update the score in the cookie
+function updateScore() {
+    document.cookie = "score=" + clicks + "; path=/";
+}
+
+// Get your button element
+var button = document.getElementById('circle');
+
+// Add a click event listener to your button
+button.addEventListener('click', function() {
+    // Increment clicks and update the score in the cookie whenever the button is clicked
+    
+    updateScore();
+});
+
+
+
         let play = document.getElementById("play", playgame);
         let settings_back = document.getElementById('settings_back_button');
         let circleElement = document.getElementById('circle');
@@ -385,6 +465,8 @@
         settings_back.addEventListener('click', settingsBackButton)
         play.addEventListener('click', playgame)
 
+        clicksElement.textContent = clicks;
+        clicks_shop.textContent = clicks;
 
         function playgame()
         {
@@ -395,20 +477,6 @@
             game.style.display = 'block';
         }
 
-
-        // Check if the browser supports localStorage to save the clicks amount
-        if (typeof(Storage) !== "undefined") {
-        // Initialize your variable
-
-        // Store the variable in local storage
-           localStorage.setItem("clicks", String(clicks));
-
-     // Retrieve the variable from local storage
-           let savedClicks = Number(localStorage.getItem("clicks"));
-
-        } else {
-           console.log("Sorry, your browser does not support Web Storage...");
-        }
 
     var correctPassword = "marco123"; // secret password
 
@@ -455,28 +523,6 @@ function getCookie(name) {
 // Create a variable with the number of clicks
 
 // Check if there is a cookie with the clicks value
-var clicksCookie = getCookie("clicks");
-
-// If the cookie is not empty, convert it to a number and assign it to clicks
-if (clicksCookie != "") {
-  clicks = Number(clicksCookie);
-}
-
-// This function sets a cookie with a given name, value, and expiry date
-function setCookie(name, value, days) {
-  // Create a date object for the expiry date
-  var expiryDate = new Date();
-  
-  // Set the expiry date to the current date plus the given number of days
-  expiryDate.setTime(expiryDate.getTime() + (days * 24 * 60 * 60 * 1000));
-  
-  // Convert the date to a UTC string
-  var expires = "expires=" + expiryDate.toUTCString();
-  
-  // Set the cookie with the name, value, and expiry date
-  document.cookie = name + "=" + value + "; " + expires + "; path=/";
-}
-
 
     document.addEventListener("DOMContentLoaded", cookiesclicks);
 
@@ -682,3 +728,4 @@ function setCookie(name, value, days) {
     </script>
 </body>
 </html>
+<!-- not finished yet -->
